# SzyfrogramFull

./: .gitignore  CMakeLists.txt
include/: BigInteger.h  Matrix.h  MemoryUtilities.h
main/: main.cpp
src/: BigInteger.cpp  Matrix.cpp  MemoryUtilities.cpp
test/: test1.txt
